k8s/vue/vue-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vue-ingress
spec:
  rules:
  - host: "farmercompensation.ddns.net"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: vue-svc
            port:
              name: vue
  - host: "our-host.ddns.net"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: vue-svc
            port:
              name: vue
