k8s/vue/vue-spring-mailhog-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: combined-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "farmercompensationencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: "farmercompensation.ddns.net"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: vue-svc
            port:
              name: vue
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: spring-svc
            port:
              name: spring
      - path: /mailhog
        pathType: Prefix
        backend:
          service:
            name: mailhog-svc
            port:
              number: 8025
  tls:
  - hosts:
    - farmercompensation.ddns.net
    secretName: spring-production-certificate
